--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="CS Society" />
+  <meta property="og:url" content="https://cs-society-usm.github.io/" />
   <meta property="og:description" content="CS Society limited edition high quality merch.">
   <meta property="og:image"  itemprop="image" content="logo.png">
 
