--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
   </footer>
 
   
-  <script src="/load.js"></script>
-  <script src="/main.js"></script>
+  <script src="/js/load.js"></script>
+  <script src="/js/main.js"></script>
 
 </body>
 
