Add Github icon to footer

--- a/cart.html
+++ b/cart.html
@@ -287,6 +287,7 @@
       <a href="https://www.instagram.com/cs.usm/"><i class="fab fa-instagram text-white fa-lg m-2"></i></a>
       <a href="https://www.facebook.com/cs.usm.my"><i class="fab fa-facebook-square text-white fa-lg m-2"></i></a>
       <a href="https://www.linkedin.com/company/cssocietyusm"><i class="fab fa-linkedin text-white fa-lg m-2"></i></a>
+      <a href="https://github.com/CS-Society-USM"><i class="fab fa-github-square text-white fa-lg m-2"></i></a>
     </div>
   </footer>
 
