Adjust footer & console msg

--- a/cart.html
+++ b/cart.html
@@ -280,7 +280,7 @@
   </div>
     
   <footer class="page-footer font-small d-flex justify-content-center align-items-center row">
-    <div class="footer-copyright text-center fw-bold">© 2021 Developed with ❤️ by CS Society 2021/2022 (Hyperion) Universiti Sains Malaysia
+    <div class="footer-copyright text-center fw-bold">© 2021 Coded with ❤️ by CS Society 2021/2022 (Hyperion) Universiti Sains Malaysia
       <span class="d-block">All rights reserved.</span>
     </div>
     <div>
