--- a/thankyou.html
+++ b/thankyou.html
@@ -75,9 +75,8 @@
 
   </div>
   
-  
   <footer class="page-footer position-fixed font-small d-flex justify-content-center align-items-center row">
-    <div class="footer-copyright text-center fw-bold">© 2021 Developed with ❤️ by CS Society 2021/2022 (Hyperion) Universiti Sains Malaysia
+    <div class="footer-copyright text-center fw-bold">© 2021 Coded with ❤️ by CS Society 2021/2022 (Hyperion) Universiti Sains Malaysia
       <span class="d-block">All rights reserved.</span>
     </div>
     <div>
@@ -89,8 +88,15 @@
     </div>
   </footer> 
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    <script>
+      $( document ).ready(function() {
+          console.log('%c Hello there! I see you\'re checking out the code here ;) Feel free to look around. ', 'background: #222; color: #bada55');
+          console.log('%c Developer profile: https://github.com/peanutooo ', 'background: #222; color: #bada55');
+          console.log('%c Any feedback or suggestions?\n Drop me a message on LinkedIn: https://www.linkedin.com/in/iris-yan/ ', 'background: #222; color: #bada55');
+      })
+    </script>
   </body>
 </html>
 
