--- a/cart.html
+++ b/cart.html
@@ -80,7 +80,7 @@
           <div class="text-dark text-center fw-bold d-block d-sm-none text-decoration-underline mb-2"><h5>Checkout details</h5></div>
 
           <div class="mb-3">
-            <label for="name" class="form-label fw-bold">Name</label>
+            <label for="name" class="form-label fw-bold">Full name</label>
             <input type="text" class="form-control" name="Name" id="name" required>
           </div>
 
