--- a/cart.html
+++ b/cart.html
@@ -208,7 +208,7 @@
           <p class="mb-1">Account number: <b>164165077378</b></p>
           <p class="mb-1">Accountholder name: <b>Shindujaah Jaya Kumar </b></p>
           <p class="mb-1">Bank name: <b>Maybank</b></p>
-          <p>Reference: <b>YOUR_USM_MATRIC_NUMBER</b></p>
+          <p>Reference: <b>MatricNumber CS Merch</b></p>
 
           <label for="Receipt" class="form-label fw-bold">Receipt link
             <span class="d-inline-block help-btn" id="receiptHelp" data-bs-toggle="modal" data-bs-target="#receiptHelpModal" >
