--- a/cart.html
+++ b/cart.html
@@ -242,6 +242,7 @@
             </div>
         </div>
           <button type="submit" class="btn btn-danger col-12 p-2 fs-5" id="checkoutSubmitBtn" value="submit" id="submit-form">Checkout</button>
+          <div class="loader-small d-none"></div>
         
         </div>
   
