Edit pickup note

--- a/cart.html
+++ b/cart.html
@@ -254,7 +254,8 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body p-4">
-                      <p>If you live near USM Main Campus (but not in hostel) and would like to self-pickup, please check the pickup option and write "Self pickup" in the Address field. Our team will be in touch for the pickup arrangements.</p>
+                      <p>If you live <b>near USM Main Campus (but not in hostel)</b> and would like to self-pickup, please check the <b>Pick Up</b> option and write "Self pickup" in the Address field.</p>
+                      <p>Our team will be in touch with you for the pickup arrangements.</p>
                       <a href="https://wa.me/+60143142331" class="d-block">Shindujaah</a>
                       <a href="https://wa.me/+60173183835" class="d-block">Aisyah</a>
                       
