Add whatsapp icons

--- a/cart.html
+++ b/cart.html
@@ -237,8 +237,8 @@
                   </div>
                   <div class="modal-body p-4">
                       <p>If you an international student currently residing outside of Malaysia, please contact us for further details:</p>
-                      <a href="https://wa.me/+60143142331" class="d-block">Shindujaah</a>
-                      <a href="https://wa.me/+60173183835" class="d-block">Aisyah</a>
+                      <a href="https://wa.me/+60143142331" class="d-block"><i class="fab fa-whatsapp fa-sm me-2"></i>Shindujaah</a>
+                      <a href="https://wa.me/+60173183835" class="d-block"><i class="fab fa-whatsapp fa-sm me-2"></i>Aisyah</a>
                       
                   </div>
               </div>
@@ -256,8 +256,8 @@
                   <div class="modal-body p-4">
                       <p>If you live <b>near USM Main Campus (but not in hostel)</b> and would like to self-pickup, please check the <b>Pick Up</b> option and write "Self pickup" in the Address field.</p>
                       <p>Our team will be in touch with you for the pickup arrangements.</p>
-                      <a href="https://wa.me/+60143142331" class="d-block">Shindujaah</a>
-                      <a href="https://wa.me/+60173183835" class="d-block">Aisyah</a>
+                      <a href="https://wa.me/+60143142331" class="d-block"><i class="fab fa-whatsapp fa-sm me-2"></i>Shindujaah</a>
+                      <a href="https://wa.me/+60173183835" class="d-block"><i class="fab fa-whatsapp fa-sm me-2"></i>Aisyah</a>
                       
                   </div>
               </div>
