--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="img/logo.png">
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
@@ -91,26 +89,13 @@
     </div>
 
     <div>
-      <div id="itemAddedToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+      <div id="cartUpdatedToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-body row me-2">
           <div class="col-2">
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
           <div class="col-10 text-center fw-bold">
-            Item added to cart!
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div>
-      <div id="itemUpdatedToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-body row me-2">
-          <div class="col-2">
-            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-          </div>
-          <div class="col-10 text-center fw-bold">
-            Item updated in cart!
+            Cart updated!
           </div>
         </div>
       </div>
