--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
 <body>
 
-  <div class="preloader">
+  <!-- <div class="preloader">
     <div class="loader"></div>
     <h6 class="fw-bold mt-4 text-center text-white">Loading amazing stuff...</h6>
-  </div>
+  </div> -->
 
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid d-flex">
