--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
   <div class="container mt-5 cont_all">
 
+    <div class="text-center text-white fs-2 bg-danger fw-bold">PREORDER</div>
     <div class="m-4" id="products-display">
       <div class="row justify-content-evenly"  id="all-items">
       </div>
@@ -104,7 +105,7 @@
     </div>
 
     <div class="view-cart-bg"></div>
-    <a href="/cart.html" class="btn btn-warning view-cart text-center d-flex justify-content-center align-items-center" >
+    <a href="/cart.html" class="btn btn-danger view-cart text-center d-flex justify-content-center align-items-center" >
       <i class="fas fa-shopping-cart fa-lg M-auto"></i>
     </a>
 
