Cleanup checkout page

--- a/cart.html
+++ b/cart.html
@@ -217,7 +217,7 @@
             <tr>
               <th scope="col" class="col-5 text-white">Item</th>
               <th scope="col" class="col-2 text-white">Qty</th>
-              <th scope="col" class="col-2 text-white">Amount</th>
+              <th scope="col" class="col-2 text-white text-end">Amount</th>
               <th scope="col" class="col-1 text-white"></th>
             </tr>
           </thead>
