--- a/cart.html
+++ b/cart.html
@@ -13,10 +13,10 @@
 </head>
 <body>
 
-  <!-- <div class="preloader">
+  <div class="preloader">
     <div class="loader"></div>
     <h6 class="fw-bold mt-4 text-center text-white">Loading your cart...</h6>
-  </div> -->
+  </div>
 
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid d-flex">
