--- a/cart.html
+++ b/cart.html
@@ -313,8 +313,8 @@
   </div>
     
   <footer class="page-footer font-small d-flex justify-content-center align-items-center row">
-    <div class="footer-copyright text-center fw-bold">© 2021 Coded with ❤️ by CS Society 2021/2022 (Hyperion) Universiti Sains Malaysia
-      <span class="d-block">All rights reserved.</span>
+    <div class="footer-copyright text-center fw-bold">Coded with ❤️ by CS Society 2021/2022 (Hyperion) Universiti Sains Malaysia
+      <span class="d-block">© 2021 All rights reserved.</span>
     </div>
     <div>
       <a href="https://www.instagram.com/cs.usm/"><i class="fab fa-instagram text-white fa-lg m-2"></i></a>
