--- a/thankyou.html
+++ b/thankyou.html
@@ -67,26 +67,25 @@
 
     <div><h4>Thank you for your purchase! :)</h4></div>
     <div class="fw-bold">Join this WhatsApp group below for information and updates on Merch Products ordered.</div>
-    <div class="mt-2 fst-italic">[Compulsory for all to join]</div>
     <a class="btn btn-success rounded-pill mt-4 d-flex justify-content-center align-items-center whatsapp-btn m-auto mt-2" href="https://bit.ly/CSMerch21">
       <i class="fab fa-whatsapp fa-lg me-2"></i>
       <h5 class="mb-0 text-white">Join here</h5>
     </a>
+    <div class="mt-2 fst-italic mb-3">[Compulsory for all to join]</div>
 
   </div>
   
-  <footer class="page-footer position-fixed font-small d-flex justify-content-center align-items-center row">
-    <div class="footer-copyright text-center fw-bold">© 2021 Coded with ❤️ by CS Society 2021/2022 (Hyperion) Universiti Sains Malaysia
-      <span class="d-block">All rights reserved.</span>
+  <footer class="page-footer font-small d-flex justify-content-center align-items-center row">
+    <div class="footer-copyright text-center fw-bold">Coded with ❤️ by CS Society 2021/2022 (Hyperion) Universiti Sains Malaysia
+      <span class="d-block">© 2021 All rights reserved.</span>
     </div>
     <div>
       <a href="https://www.instagram.com/cs.usm/"><i class="fab fa-instagram text-white fa-lg m-2"></i></a>
       <a href="https://www.facebook.com/cs.usm.my"><i class="fab fa-facebook-square text-white fa-lg m-2"></i></a>
       <a href="https://www.linkedin.com/company/cssocietyusm"><i class="fab fa-linkedin text-white fa-lg m-2"></i></a>
       <a href="https://github.com/CS-Society-USM"><i class="fab fa-github-square text-white fa-lg m-2"></i></a>
-
     </div>
-  </footer> 
+  </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
