Adjust thankyou footer

--- a/thankyou.html
+++ b/thankyou.html
@@ -75,7 +75,7 @@
 
   </div>
   
-  <footer class="page-footer font-small d-flex justify-content-center align-items-center row">
+  <footer class="page-footer font-small d-flex position-fixed justify-content-center align-items-center row">
     <div class="footer-copyright text-center fw-bold">Coded with ❤️ by CS Society 2021/2022 (Hyperion) Universiti Sains Malaysia
       <span class="d-block">© 2021 All rights reserved.</span>
     </div>
