Country code caption

--- a/cart.html
+++ b/cart.html
@@ -100,10 +100,11 @@
             </div>
           </div>
 
-          <div class="mb-3 row g-2 d-flex align-items-center">
+          <div class="mb-3 row g-2 d-flex align-items-top">
             <label for="" class="form-label fw-bold">Contact number</label>
             <div class="col-3">
               <input type="text" class="form-control contact_countrycode" name="contact_countrycode" id="contact_part1" required placeholder="+60"> 
+              <p class="desc-note lh-1">Country code</p>
             </div>
             <div class="col-9">
               <input type="text" class="form-control col-10 Contact_body" name="Contact_body" id="contact_part2" required placeholder="12-3456789"> 
