--- a/cart.html
+++ b/cart.html
@@ -184,7 +184,7 @@
               <option value="Kelantan">Kelantan</option>
               <option value="Kuala Lumpur">Kuala Lumpur</option>
               <option value="Labuan">Labuan</option>
-              <option value="Labuan">Labuan</option>
+              <option value="Melaka">Melaka</option>
               <option value="Negeri Sembilan">Negeri Sembilan</option>
               <option value="Pahang">Pahang</option>
               <option value="Penang">Penang</option>
