Set form requirement

--- a/cart.html
+++ b/cart.html
@@ -176,8 +176,7 @@
           
           <div class="mb-3">
             <label for="State" class="form-label fw-bold ">State</label>
-            <!-- <input type="text" class="form-control " name="State" id="State" required> -->
-            <select class="form-select bg-dark ship-only-input text-white"  name="State" id="State" aria-label=".form-select-sm">
+            <select class="form-select bg-dark ship-only-input text-white"  name="State" id="State" aria-label=".form-select-sm" required>
               <option selected disabled>Select state...</option>
               <option value="Johor">Johor</option>
               <option value="Kedah">Kedah</option>
