Update account details

--- a/cart.html
+++ b/cart.html
@@ -234,9 +234,9 @@
 
         <div class="mb-3 details-col p-4 p-sm-5">
           <p class="fw-bold fs-4 fst-italic">Please bank in the total amount to:</p>
-          <p class="mb-1">Account number: <b>164165077378</b></p>
-          <p class="mb-1">Accountholder name: <b>Shindujaah Jaya Kumar </b></p>
-          <p class="mb-1">Bank name: <b>Maybank</b></p>
+          <p class="mb-1">Account number: <b>220088870689</b></p>
+          <p class="mb-1">Accountholder name: <b>NOR AISYAH BINTI AMRAN </b></p>
+          <p class="mb-1">Bank name: <b>Bank Rakyat</b></p>
           <p>Reference: <b>CSMerch MATRIC_NUM</b></p>
 
           <div class="form-group mt-5">
