Update interface for out of stock"

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
       <!-- nav links for large screen -->
       <div class="d-none d-lg-flex justify-content-end me-5" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link me-4 btn btn-dark nav-link-btn rounded-pill d-flex justify-content-center align-items-center" href="/index.html">
+          <a class="nav-link me-4 btn btn-dark nav-link-btn rounded-pill d-flex justify-content-center align-items-center" href="index.html">
             <i class="fas fas-nav-lg fa-gift fa-sm me-2"></i>
             <h6 class="mb-0">Merch</h6>
           </a>
-          <a class="nav-link btn btn-dark nav-link-btn rounded-pill d-flex justify-content-center align-items-center" href="/cart.html">
+          <a class="nav-link btn btn-dark disabled nav-link-btn rounded-pill d-flex justify-content-center align-items-center" href="cart.html">
             <i class="fas fas-nav-lg fa-shopping-cart fa-sm me-2"></i>
             <h6 class="mb-0">View cart</h6>
           </a>
@@ -68,13 +68,13 @@
     <!-- nav icons for mobile -->
     <div class="d-sm-none d-flex row mt-2 m-auto justify-content-evenly align-items-center">
       <div class="col-6">
-        <a class="nav-link btn btn-warning nav-link-btn rounded-pill d-flex justify-content-center align-items-center" href="/index.html">
+        <a class="nav-link btn btn-warning nav-link-btn rounded-pill d-flex justify-content-center align-items-center" href="index.html">
           <i class="fas fa-gift fa-sm me-2"></i>
           <h5 class="mb-0 mobile-fontsize">Merch</h5>
         </a>
       </div>
       <div class="col-6">
-        <a class="nav-link btn btn-warning nav-link-btn rounded-pill d-flex justify-content-center align-items-center" href="/cart.html">
+        <a class="nav-link btn btn-warning disabled nav-link-btn rounded-pill d-flex justify-content-center align-items-center" href="cart.html">
           <i class="fas fa-shopping-cart fa-sm me-2"></i>
           <h5 class="mb-0 mobile-fontsize">Cart</h5>
         </a>
@@ -104,11 +104,6 @@
       </div>
     </div>
 
-    <div class="view-cart-bg"></div>
-    <a href="/cart.html" class="btn btn-danger view-cart text-center d-flex justify-content-center align-items-center" >
-      <i class="fas fa-shopping-cart fa-lg M-auto"></i>
-    </a>
-
   </div>
 
   <footer class="page-footer font-small d-flex justify-content-center align-items-center row">
@@ -124,8 +119,8 @@
   </footer>
 
   
-  <script src="/js/load.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="js/load.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
