--- a/cart.html
+++ b/cart.html
@@ -85,19 +85,8 @@
           </div>
 
           <div class="mb-3">
-            <label for="Matric_num" class="form-label fw-bold">Matric number</label>
-            <input type="text" class="form-control" name="Matric_num" id="Matric_num" required>
-          </div>
-
-          <div class="mb-3">
-            <label for="Email" class="form-label fw-bold">Student Outlook e-mail</label>
-            <input type="email" class="form-control" name="Email" id="Email" placeholder="eg ali@student.usm.my" pattern="^.*@student.usm.my" required 
-            onchange="validifyEmail()"
-            oninvalid="this.setCustomValidity('Please provide a valid student Outlook e-mail.')"
-            oninput="this.setCustomValidity('')"> 
-            <div class="invalid-input d-none" id="invalid-email">
-              Please provide a valid student Outlook e-mail.
-            </div>
+            <label for="Email" class="form-label fw-bold">E-mail</label>
+            <input type="email" class="form-control" name="Email" id="Email" placeholder="eg abc@usm.my" required > 
           </div>
 
           <div class="mb-3 row g-2 d-flex align-items-top">
@@ -121,26 +110,6 @@
             <div class="form-check">
               <input class="form-check-input" type="radio" name="Gender" id="male" value="male" required>
               <label class="form-check-label" for="male">Male</label>
-            </div>
-          </div>
-
-          <div class="mb-3">
-            <label class="fw-bold">Year of study</label>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="Year" id="year1" value="1" required>
-              <label class="form-check-label" for="year1">Year 1</label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="Year" id="year2" value="2" required>
-              <label class="form-check-label" for="year2">Year 2</label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="Year" id="year3" value="3" required>
-              <label class="form-check-label" for="year3">Year 3</label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="Year" id="year4" value="4" required>
-              <label class="form-check-label" for="year4">Year 4</label>
             </div>
           </div>
 
